--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,15 +6,10 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
-      - windows
       - darwin
-archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+      - windows
+    goarch:
+      - amd64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
