--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - '**'
+      - '!main'
   pull_request:
     branches:
       - '**'
+      - '!main'
 jobs:
   build:
     runs-on: ubuntu-latest
