--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Build and Test
 on:
   push:
     branches:
@@ -13,11 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.18
       - name: Build
-        run: go build -v ./...
-      - name: Test
-        run: go test -cover -coverprofile=coverage.txt -v ./...
+        run: make build
+      - name: Run Unit Tests with Coverage
+        run: make test
+      - name: Upload Coverage
+        uses: codecov/codecov-action@v3
